fixed issue with header paddings on mobile

--- a/app/javascript/src/css/Antd.less
+++ b/app/javascript/src/css/Antd.less
@@ -560,7 +560,11 @@ button.btn.btn-block.btn-primary.mt-lg.login-btn {
 }
 
 .topping-mobile {
-  padding-top: 102px;
+  padding-top: 80px;
+}
+
+.topping-mobile-float {
+  padding-top: 105px;
 }
 
 .advert-banner {
